--- a/webapp/index.html
+++ b/webapp/index.html
@@ -30,7 +30,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
-<body id="body" onload="onLoad()" style="background-image: url(&quot;assets/img/Device2.svg&quot;);width: 630px;height: 393px;max-height: 393px;min-height: 393px;background-color: rgb(17,16,16);background-repeat: no-repeat;">
+<body id="body" onload="onLoad()" style="background-image: url(&quot;assets/img/Device3.svg&quot;);width: 630px;height: 393px;max-height: 393px;min-height: 393px;background-color: rgb(17,16,16);background-repeat: no-repeat;">
     <div class="container" style="width: 502px;">
         <div class="row">
             <div class="col" style="padding: 0px;">
@@ -42,15 +42,15 @@
                         </select>
                     </div>
                 </div>
-                <div class="card d-sm-flex align-items-sm-center" style="background-color: rgba(255,255,255,0);height: 57px;margin-top: 23px;padding-top: 0px;">
+                <div class="card d-sm-flex align-items-sm-center" style="background-color: rgba(255,255,255,0);height: 57px;margin-top: 4px;padding-top: 0px;">
                     <div class="card-body d-sm-flex justify-content-sm-center align-items-sm-center" style="height: auto;padding: 0px;">
                         <h4 id="number" onload="generateRandomNumber();" class="d-sm-flex card-title" style="margin: 0px;color: #bad8fc;font-family: Electrolize, sans-serif;font-size: 38px;"></h4>
                     </div>
                 </div>
-                <div class="card d-sm-flex align-items-sm-center" style="background-color: rgba(255,255,255,0);margin-top: 23px;padding-top: 0px;height: 57px;">
+                <div class="card d-sm-flex align-items-sm-center" style="background-color: rgba(255,255,255,0);margin-top: 0px;padding-top: 0px;height: 57px;">
                     <div class="card-body d-sm-flex justify-content-sm-center align-items-sm-center" style="height: auto;padding: 0px;">
                         <div class="row" style="margin: 0px;min-width: 165px;width: 358px;">
-                            <div class="col-5 d-sm-flex justify-content-sm-center align-items-sm-center"><button onclick="securityScript()" class="btn btn-primary btn-push" type="button" style="background-color: rgb(115,70,60);color: rgb(122,122,122));">SECURE</button></div>
+                            <div class="col-5 d-sm-flex justify-content-sm-center align-items-sm-center invisible"><button onclick="securityScript()" class="btn btn-primary btn-push" type="button" style="background-color: rgb(115,70,60);color: rgb(122,122,122));">SECURE</button></div>
                             <div class="col-2 d-sm-flex justify-content-sm-center align-items-sm-center" style="padding: 0px;"><i class="fas fa-circle led" style="font-size: 30px;color: rgb(68,255,5);"></i></div>
                             <div class="col-5 d-sm-flex justify-content-sm-center"><button id="shakeButtonId" onclick="shakeScript(); shakeButtonAnimation(); " class="btn btn-primary btn-push" type="button" style="background-color: rgb(115,70,60);color: rgb(122,122,122);font-family: Electrolize, sans-serif;">SHAKE</button></div>
                         </div>
@@ -58,17 +58,17 @@
                 </div>
                 <div class="row" style="margin: 0px;margin-right: 89px;margin-left: 89px;height: auto;">
                     <div class="col">
-                        <div class="card d-sm-flex" style="background-color: rgba(255,255,255,0);height: 57px;margin-top: 23px;margin-left: 23px;margin-right: 23px;">
+                        <div class="card d-sm-flex" style="background-color: rgba(255,255,255,0);height: 57px;margin-top: 0px;margin-left: 23px;margin-right: 23px;">
                             <div class="card-body d-sm-flex" style="height: auto;padding: 0px;min-height: auto;">
                                 <div class="row" style="margin: 0px;min-width: 100%;">
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-left" style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">▌Sensor&nbsp;</p>
-                                        <p class="text-left" style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">▌Alerts&nbsp;</p>
+                                        <p class="text-left" style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">▌DeviceID&nbsp;</p>
                                         <p class="text-left" style="color: rgb(0,198,242);font-family: Electrolize, sans-serif;margin-bottom: 5px;">▌Firmware</p>
                                     </div>
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Vibration&nbsp;</p>
-                                        <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">24</p>
+                                        <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">01730...8255</p>
                                         <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">1.421</p>
                                     </div>
                                 </div>
@@ -85,9 +85,9 @@
                                     </div>
                                 </div>
                                 <div class="col" style="padding: 0px;">
-                                    <p class="text-right tick-box invisible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
-                                    <p class="text-right tick-box invisible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
-                                    <p class="text-right tick-box invisible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
+                                    <p class="text-right tick-box visible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
+                                    <p class="text-right tick-box visible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
+                                    <p class="text-right tick-box visible" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;"><span class="glyphicon">&#xe013;</span></p>
                                 </div>
 
                             </div>
