Display new deviceID

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -68,7 +68,7 @@
                                     </div>
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Vibration&nbsp;</p>
-                                        <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">01730...8255</p>
+                                        <p id="deviceID" class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Loading</p>
                                         <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">1.421</p>
                                     </div>
                                 </div>
