Change dynamically deviceID

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -68,8 +68,8 @@
                                     </div>
                                     <div class="col" style="padding: 0px;">
                                         <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Vibration&nbsp;</p>
-                                        <p id="deviceID" class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Demo_firmware</p>
-                                        <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Loading</p>
+                                        <p id="deviceID" class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Loading</p>
+                                        <p class="text-right" style="color: rgb(0,242,111);font-family: Electrolize, sans-serif;margin-bottom: 5px;">Demo firmware</p>
                                     </div>
                                 </div>
 
